# aircheq-podcast

./: .gitignore  Cargo.toml  README.md
src/: main.rs
systemd/: aircheq-podcast.service  aircheq-podcast.timer
