[package]
name = "aircheq-podcast"
version = "0.1.0"
authors = ["madmaid <madmaid@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
rss = "1.9.0"
serde = "1.0.117"
anyhow = "1.0.34"
getopts = "0.2.21"
serde_derive = "1.0.117"
walkdir = "2.3.1"
url = "2.2.0"
shellexpand = "2.0.0"
nix = "0.19.1"
users = "0.11.0"

